# qualisys_drone_sdk

./: README.md  format.sh  pyproject.toml
api/: schema.py  service.py
config/: 250516v1.yaml
examples/_future/games/: cf_pong deck.py
examples/_future/labs/: cf_solo zresponse.py
examples/flapper/: api_connect_test.py  cf_solo_data_collect_circle.py  cf_solo_data_collect_linear.py  cf_solo_worked.py  data_collection_test.py  plot_trajectory.py  solo_koopman_conformal_circle.py
examples/flapper/circular_traj/: circular_XYZ_20250514225328.json
examples/flapper/koopman/: xy2z_001.json  xy2z_002.json  xy2z_003.json  xy_001.json  xyz_001.json  xyz_002.json  xz_001.json  xz_002.json  yz_001.json
examples/original/: cf_interactive_deck.py  cf_interactive_traqr.py  cf_multi.py  cf_multi_interactive_deck.py  cf_solo.py
koopman_cp/src/: probabilistic_tracking_error.py  theoretical_bounds_validator.py  validate_bounds_example.py
qfly/: __init__.py  crazyflie.py  deck.py  parallel_contexts.py  pose.py  qtm.py  traqr.py  utils.py  world.py
