[project]
name = "qualisys-drone-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cflib>=0.1.28",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.4",
    "pynput>=1.8.1",
    "qtm>=2.1.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["qfly"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
